--- a/API calling/index.html
+++ b/API calling/index.html
@@ -5,11 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      main {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 200px;
+      }
+      .info {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+      }
+    </style>
   </head>
   <body>
-    <div>
-      <input type="text" placeholder="Enter city name" />
-      <button id="search-button">Search</button>
+    <main>
+      <div>
+        <input id="city-input" type="text" placeholder="Enter city name" />
+        <button id="search-button">Search</button>
+      </div>
+    </main>
+    <br />
+    <br />
+    <div class="info">
+      <h3 id="city-name">City name</h3>
+      <h5 id="city-time">Time</h5>
+      
+      <h5 id="city-temp">Temperature in C</h5>
+      
     </div>
 
     <script src="script.js"></script>
